# ragatuit

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONSOLIDATED_STATUS_IMPLEMENTATION_SPEC.md  FEATURE.md  LICENSE  PLAN.md  README.md  ROADMAP.md  best_practices.md  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  memory.md  risks.md
backend/: .dockerignore  .gitignore  CONTENT_EXTRACTION_SPEC.md  Dockerfile  MEMORY.md  QUESTION_MODULE_REFACTORING.md  QUIZ_ORCHESTRATION_REFACTORING.md  REFACTORING_IMPLEMENTATION_SPEC.md  alembic.ini  app.db  docker-compose.yml  memory.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0e5d8cc7d759_initial_migration.py  279918ad3a1e_add_content_extraction_fields_to_quiz_.py  387a734aea0f_update_at_field_is_not_null_on_creation.py  3c5581805108_create_user_table.py  a051a87cf73b_initial_migration.py  (+12 more)
backend/app/: backend_pre_start.py  common.py  config.py  crud.py  database.py  deps.py  encryption.py  exceptions.py  initial_data.py  logging_config.py  main.py  models.py  retry.py  security.py  tests_pre_start.py  utils.py
backend/scripts/: format.sh  prestart.sh  tests-prestart.sh  tests-start.sh
backend/src/: api.py  backend_pre_start.py  common.py  config.py  database.py  deps.py  exceptions.py  initial_data.py  logging_config.py  main.py  middleware.py  retry.py  security.py  tests_pre_start.py
backend/tests/: __init__.py  common_mocks.py  conftest.py  database.py  factories.py  test_auth.py  test_auth_api.py  test_auth_utils.py  test_data.py  test_user_model.py
(+581 files in other folders)
