[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Marius Solaas",email = "mso270@post.uit.no"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi (>=0.115.9,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "databases[postgresql] (>=0.9.0,<0.10.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "alembic (>=1.16.1,<2.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "opentelemetry-sdk (>=1.34.1,<2.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.55b1,<0.56)",
    "opentelemetry-exporter-jaeger (>=1.21.0,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "chromadb (>=1.0.12,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
    "sentry-sdk (>=2.30.0,<3.0.0)",
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
black = "^25.1.0"
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
isort = "^6.0.1"
mypy = "^1.16.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
